--- a/ConsoleApplicationParceAttribute/T4 Folder/MappingExtension.tt
+++ b/ConsoleApplicationParceAttribute/T4 Folder/MappingExtension.tt
@@ -16,6 +16,8 @@ using System.Linq;
     MapHelper.DoSuffix = "ViewModel";
     MapHelper.DoProjects.Add("DataObject");
     MapHelper.DtoProjects.Add("DataTransferObject");
+	MapHelper.DOSkipAttribute=false;
+	MapHelper.DTOSkipAttribute=false;
 
     GenerateMap(MapHelper);
 #>
